kubernetes/neo/apps/default/babybuddy/app/httproute-ext.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: babybuddy-external
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: istio-gateways
  hostnames:
  - "babybuddy.abasitt.tech"
  - "babybuddy.${PUBLIC_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: babybuddy
      port: 8000
      weight: 100
